fixed horizontal scroll in Safari

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,6 +99,10 @@ h6 {
   font-weight: 600;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 .wrapper {
   margin: 0 auto;
   max-width: 1440px;
